--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@
     color: var(--primary) !important;
 }
 
+
 .navbar-dark .navbar-brand img {
     max-height: 60px;
     transition: .5s;
@@ -187,6 +188,39 @@
     animation: imgRotate 50s linear infinite;
 }
 
+.hero-build {
+    background: linear-gradient(rgba(60, 22, 199, 0.8), rgba(84, 200, 201, 0.8)), url(../img/bg-build.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.hero-build img {
+    animation: none !important;
+}
+
+.hero-credits-template {
+    background: linear-gradient(rgba(0, 156, 255, 0.8), rgba(255, 255, 255, 0.8));
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.hero-credits-template img {
+    animation: none !important;
+}
+
+.hero-credits-img {
+    background: linear-gradient(rgba(20, 188, 125, 0.8), rgba(255, 255, 255, 0.8));
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.hero-credits-img img {
+    animation: none !important;
+}
+
 .hero-special {
     background: linear-gradient(rgba(60, 22, 199, 0.8), rgba(84, 200, 201, 0.8)), url(../img/bg-hero.jpeg);
     background-position: center center;
@@ -196,6 +230,12 @@
 
 .hero-special img {
     animation: imgBump 5s ease-in-out infinite;
+}
+
+.img-fluid-spec {
+    max-width: 100%;
+    height: auto;
+    animation: imgBumpTiny 5s ease-in-out infinite;
 }
 
 @keyframes imgRotate { 
@@ -210,6 +250,15 @@
     }
     50% {
         transform: scale(1.05);
+    }
+}
+
+@keyframes imgBumpTiny {
+    0%, 100% {
+        transform: scale(0.96);
+    }
+    50% {
+        transform: scale(1.02);
     }
 }
 
